--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin-bottom: 40px;
+            border-radius: 15px
         }
         .app-buttons {
             display: flex;
@@ -163,8 +164,10 @@
             <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="#" class="social-icon" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
         </div>
-
+ -->
         <img src="./images/abidereads.png" alt="AbideReads logo" class="profile-image">
+
+<!--         
 
         <p>Get the AbideReads app now!</p>
         <div class="app-buttons">
