--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             color: #ccc;
         }
         .profile-image {
-            width: 100%;
+            width: 75%;
             max-width: 350px;
             height: auto;
             border-radius: 5px;
@@ -147,6 +147,8 @@
 </head>
 <body>
     <div class="glass-container">
+        <img src="./images/abidereads.png" alt="AbideReads logo" class="profile-image">
+        
         <h1>Hello,</h1>
         <h2>Welcome to Abide Reads</h2>
         <h4>AbideReads is your dedicated mobile app for Christian literature. It's a sanctuary for stories that inspire, encourage, and deepen your faith, bringing timeless and new Christian books directly to you. Dive into a library designed to uplift your spirit and connect you with powerful narratives.</h4>
@@ -165,7 +167,6 @@
             <a href="#" class="social-icon" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
         </div>
  -->
-        <img src="./images/abidereads.png" alt="AbideReads logo" class="profile-image">
 
 <!--         
 
@@ -179,5 +180,10 @@
             </a>
         </div>
     </div> -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+        <img
+          src="https://hitwebcounter.com/counter/counter.php?page=7860567&style=0006&nbdigits=5&type=page&initCount=0"
+          title="Free Counter" Alt="web counter" border="0" />
+    </a>
 </body>
 </html>
