--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="wYvpVoJMcQ7cl99o-cnvzV7bIvRh2vT6agaLgFtUni4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abide Reads</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
