--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
     <div class="glass-container">
-        <img src="./images/abidereads.png" alt="AbideReads logo" class="profile-image">
+        <img src="./images/abide-reads-logo.png" alt="AbideReads logo" class="profile-image">
         
         <h1>Hello,</h1>
         <h2>Welcome to Abide Reads</h2>
