--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
 
   <p>
     Your privacy is important to us. This Privacy Policy explains how
-    <strong>Your App Name</strong> ("we", "our", or "us") collects, uses, and
+    <strong>Abide Reads</strong> ("we", "our", or "us") collects, uses, and
     protects your information when you use our mobile application.
   </p>
 
@@ -60,7 +60,7 @@
   <h2>Contact Us</h2>
   <p>
     If you have any questions about this Privacy Policy, please contact us at:
-    <a href="mailto:support@yourapp.com">support@yourapp.com</a>
+    <a href="mailto:abidereads@gmail.com">support@yourapp.com</a>
   </p>
 </body>
 </html>
