Privacy and terms links
updated index file with links to privacy and terms.

--- a/terms.html
+++ b/terms.html
@@ -26,7 +26,7 @@
   <p>Last updated: <strong>September 1, 2025</strong></p>
 
   <p>
-    By downloading, accessing, or using <strong>Your App Name</strong>, you
+    By downloading, accessing, or using <strong>Abide Reads</strong>, you
     agree to be bound by these Terms of Use. If you do not agree, do not use the app.
   </p>
 
@@ -45,7 +45,7 @@
   <h2>Intellectual Property</h2>
   <p>
     All rights, title, and interest in the app, including content and trademarks,
-    remain with <strong>Your Company Name</strong>.
+    remain with <strong>Abide Reads</strong>.
   </p>
 
   <h2>Limitation of Liability</h2>
@@ -68,7 +68,7 @@
   <h2>Contact Us</h2>
   <p>
     For questions about these Terms, contact us at:
-    <a href="mailto:support@yourapp.com">support@yourapp.com</a>
+    <a href="mailto:abidereads@gmail.com">support@yourapp.com</a>
   </p>
 </body>
 </html>
